# exios

./: CHANGELOG.md  CMakeLists.txt  Doxyfile  ExiosConfig.cmake.in
.versioning/: version-update
.versioning/changes/: 6NpzEsZxlX.patch.md  78sC7Il5cF.minor.md  7vaDHHajmt.minor.md  A7A27ZhOU7.patch.md  GKMKPK7vMH.patch.md  IUV4pLTeD9.minor.md  JO9ZC5OSNF.minor.md  KWN4zkV5Vt.patch.md  NVbBag9pxm.minor.md  QCVELz04Jv.minor.md  TjgP8A6Ct4.patch.md  Wljo8UibG6.patch.md  XnJPiKJJ8b.minor.md  YVLGWowHrC.minor.md  YkD0jrBqjd.patch.md  Za1qLBuq5Y.minor.md  ZytO08a4Zx.patch.md  fJW0ZEswoR.patch.md  qcbiCABnuS.minor.md  xc8I3Tf7bH.patch.md  y7hqrHXKMt.minor.md  yY0sE4s60R.patch.md
cmake/: CPPCheck.cmake  MakeTest.cmake
doxygen/: mainpage.md
include/exios/: alloc_utils.hpp  async_io_operation.hpp  async_operation.hpp  buffer_view.hpp  context.hpp  context_thread.hpp  contracts.hpp  event.hpp  exios.hpp  file_descriptor.hpp  intrusive_list.hpp  intrusive_multimap.hpp  io.hpp  io_object.hpp  io_scheduler.hpp  poll_wake_event.hpp  result.hpp  scope_guard.hpp  signal.hpp  ssl.hpp  ssl_state.hpp  tcp_socket.hpp  timer.hpp  tls_operations.hpp  tls_tcp_socket.hpp  udp_socket.hpp  unix_socket.hpp  utils.hpp  work.hpp
src/: CMakeLists.txt  async_io_operation.cpp  async_operation.cpp  buffer_view.cpp  context.cpp  context_thread.cpp  contracts.cpp  event.cpp  file_descriptor.cpp  io.cpp  io_object.cpp  io_scheduler.cpp  poll_wake_event.cpp  result.cpp  signal.cpp  ssl.cpp  ssl_state.cpp  tcp_socket.cpp  timer.cpp  tls_operations.cpp  tls_tcp_socket.cpp  udp_socket.cpp  unix_socket.cpp  utils.cpp  work.cpp
tests/: CMakeLists.txt  alloc_utils_tests.cpp  async_operation_tests.cpp  cancellation_tests.cpp  context_thread_tests.cpp  event_tests.cpp  intrusive_list_tests.cpp  intrusive_multimap_tests.cpp  multi_thread_tests.cpp  result_tests.cpp  signal_tests.cpp  tcp_socket_tests.cpp  testing.hpp  timer_tests.cpp  tls_tests.cpp  tracking_allocator.hpp  udp_socket_tests.cpp  unix_socket_tests.cpp
tests/scripts/: initialize_s_server.sh  shutdown_s_server.sh
tools/: make-dist
